# data-carry-research

./: .gitignore  CLASSIFICATION_REFERENCE.md  Cargo.toml  README.md  analyse_value_research.md  config.toml.example  justfile  requirements.txt
scripts/: analyse.sh  database_stats.sh  inspect_transaction.sh  stage1-runner.sh  test-all.sh  test-stage3.sh  test-summary.sh  validate_secp256k1_pubkey.py  viz.sh
scripts/production/: pipeline.sh  stage1.sh  stage2.sh  stage3.sh
scripts/tests/: all.sh  stage1.sh  stage3.sh  summary.sh
src/: config.rs  errors.rs  lib.rs  main.rs  types.rs
src/analysis/: burn_detector.rs  burn_patterns.rs  content_type_analysis.rs  data_size_stats.rs  dust_analysis.rs  fee_analyser.rs  fee_analysis.rs  file_extension_stats.rs  mod.rs  multisig_config_stats.rs  p2ms_output_count_analysis.rs  protocol_stats.rs  protocol_temporal.rs  pubkey_validator.rs  reports.rs  signature_analysis.rs  spendability_stats.rs  spendability_temporal.rs  stamps_signature_stats.rs  stamps_transport_stats.rs  stamps_variant_temporal.rs  stamps_weekly_fee_analysis.rs  tx_fee_calculator.rs  tx_size_analysis.rs  types.rs  value_analysis.rs
src/cli/: mod.rs
src/crypto/: arc4.rs  mod.rs
src/database/: connection.rs  helpers.rs  mod.rs  query_helper.rs  schema.rs  schema_v2.rs  statistics.rs  traits.rs
src/decoder/: arc4_tool.rs  chancecoin.rs  counterparty_parser.rs  datastorage.rs  debug_display.rs  error.rs  (+9 more)
tests/: README.md  lib.rs
visualisation/: README.md  __init__.py  build_block_time_dataset.py  cli.py  config.py  db.py  export.py  plotting.py
(+228 files in other folders)
