[package]
name = "data-carry-research"
version = "0.1.0"
edition = "2021"
authors = ["deadmanoz"]
license = "MIT"
repository = "https://github.com/deadmanoz/data-carry-research"
description = "Bitcoin P2MS Data-Carrying Protocol Analyser - Extract and classify data-carrying protocols in the UTXO set"
default-run = "data-carry-research"

[lib]
name = "data_carry_research"
path = "src/lib.rs"

[[bin]]
name = "data-carry-research"
path = "src/main.rs"

[dependencies]
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.32", features = ["bundled"] }
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hex = "0.4"
sha2 = "0.10"
toml = "0.8"
base64 = "0.21"
flate2 = "1.0"
bzip2 = "0.4"
chrono = { version = "0.4", features = ["serde"] }
byteorder = "1.5"
glob = "0.3"
config = "0.14"
corepc-client = { version = "0.8", features = ["client-sync"] }
bitcoin = "0.32.7"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
rc4 = "0.1.0"

[dev-dependencies]
tempfile = "3.8"
serial_test = "3.0"
